# Todo-app

./: .gitignore  LICENSE  README.md  pyproject.toml
todoapp/backend/: manage.py
todoapp/backend/api/: apps.py  serializers.py  urls.py  views.py
todoapp/backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
todoapp/backend/todo/: admin.py  apps.py  models.py  urls.py  views.py
todoapp/backend/todo/migrations/: 0001_initial.py
todoapp/frontend/: package-lock.json  package.json
todoapp/frontend/src/: App.js
todoapp/frontend/src/components/: add-todo.js  login.js  signup.js  todos-list.js
todoapp/frontend/src/services/: todos.js
todoapp/todo-electron-app/: package-lock.json  package.json
todoapp/todo-electron-app/src/: asset-manifest.json  index.html  index.js  precache-manifest.5aa89bf698bf312dde7aa1d7c892227d.js  service-worker.js
todoapp/todo-electron-app/src/static/js/: 2.09c410d1.chunk.js  2.09c410d1.chunk.js.map  main.7cff4b46.chunk.js  main.7cff4b46.chunk.js.map  runtime~main.696eecd9.js  runtime~main.696eecd9.js.map
